clean up /components (#369)

--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -3,10 +3,6 @@ title: <UserButton />
 description: The `<UserButton />` component is used to render the familiar user button UI popularized by Google.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<UserButton />`
 
 <Images width={496} height={564} src="/docs/images/ui-components/component-user_button.svg" alt="User Button Example" />
@@ -200,83 +196,19 @@ In this example, `<UserButton />` is mounted inside a header component, which is
 
 All props below are optional.
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-    cells: [
-      <code>appearance</code>, 
-      <code>object</code>,
-      <>Controls the overall look and feel.</>
-    ],
-    },
-    {
-      cells: [
-        <code>showName</code>,
-        <code>boolean</code>,
-        <>Controls if the user name is displayed next to the user image button.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>signInUrl</code>,
-        <code>string</code>,
-        <>The full URL or path to navigate to when the "Add another account" button is clicked.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>userProfileMode</code>,
-        <code>"modal" | "navigation"</code>,
-        <>Controls whether clicking the "Manage your account" button will cause the <code>UserProfile</code> component to open as a modal, or if the browser will navigate to the <code>userProfileUrl</code> where <code>UserProfile</code> is mounted as a page.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>userProfileUrl</code>,
-        <code>string</code>,
-        <>The full URL or path leading to the user management interface.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterSignOutUrl</code>,
-        <code>string</code>,
-        <>The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps)</>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterMultiSessionSingleSignOutUrl</code>,
-        <code>string</code>,
-        <>The full URL or path to navigate to after a signing out from currently active account (multisession apps).</>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterSwitchSessionUrl</code>,
-        <code>string</code>,
-        <>Full URL or path to navigate to after a successful account change (multi-session apps).</>,
-      ],
-    },
-    {
-      cells: [
-        <code>defaultOpen</code>,
-        <code>string</code>,
-        <>Controls whether the <code>{"<UserButton />"}</code> should open by default during the first render.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>userProfileProps</code>,
-        <code>object</code>,
-        <>
-          Specify options for the underlying <code>{"<UserProfile />"}</code> component.
-          <br/>
-          e.g. <code>{"{additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}}"}</code>
-        </>,
-      ],
-    },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `showName` | `boolean` | Controls if the user name is displayed next to the user image button. |
+| `signInUrl` | `string` | The full URL or path to navigate to when the "Add another account" button is clicked. |
+| `userProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the "Manage your account" button will cause the [`<UserProfile />`][userprofile-ref] component to open as a modal, or if the browser will navigate to the `userProfileUrl` where [`<UserProfile />`][userprofile-ref] is mounted as a page.<br />Defaults to: `'modal'`. |
+| `userProfileUrl` | `string` | The full URL or path leading to the user management interface. |
+| `afterSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps). |
+| `afterMultiSessionSingleSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from currently active account (multisession apps). |
+| `afterSwitchSessionUrl` | `string` | The full URL or path to navigate to after a successful account change (multi-session apps). |
+| `defaultOpen` | `boolean` | Controls whether the `<UserButton />` should open by default during the first render. |
+| `userProfileProps` | `object` | Specify options for the underlying [`<UserProfile />`][userprofile-ref] component. e.g. `{additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}}`. |
+
+[components-ref]: /docs/components/overview
+[ap-ref]: /docs/account-portal/overview
+[userprofile-ref]: /docs/components/user/user-profile
