--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -72,44 +72,12 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
 
 All props below are optional.
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>appearance</code>, 
-        <code>object</code>, 
-        <>Controls the overall look and feel.</>
-      ],
-    },
-    {
-      cells: [
-        <code>routing</code>,
-        <code>RoutingStrategy</code>,
-        <>The routing strategy for your pages. Supported values are:
-          <ul>
-            <li>Hash (default): Hash based routing.</li>
-            <li>Path: Path based routing.</li>
-          </ul>
-        </>,
-      ],
-    },
-    {
-      cells: [
-        <code>path</code>,
-        <code>string</code>,
-        <>The path where the component is mounted when path-based routing is used.
-        <br/>e.g. <code>/user-profile</code>. This prop is ignored in hash-based routing.</>
-      ],
-    },
-    {
-      cells: [
-        <code>additionalOAuthScopes</code>,
-        <code>object</code>,
-        <>Specify additional scopes per OAuth provider that your users would like to provide if not already approved.
-        <br/>e.g. <code>{`{google: ['foo', 'bar'], github: ['qux']}`}</code></>
-      ],
-    },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. /sign-in. |
+| `additionalOAuthScopes` | `object` | Specify additional scopes per OAuth provider that your users would like to provide if not already approved. <br />e.g. `{google: ['foo', 'bar'], github: ['qux']}`. |
+
+[components-ref]: /docs/components/overview
+[ap-ref]: /docs/account-portal/overview
