--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -3,10 +3,6 @@ title: <ClerkProvider />
 description: The `<ClerkProvider />` component wraps your React application to provide active session and user context to Clerk's hooks and other components.
 ---
 
-import { Tab, Tabs } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<ClerkProvider />`
 
 The `<ClerkProvider />` component wraps your React application to provide active session and user context to Clerk's hooks and other components.
@@ -17,6 +13,14 @@ The `<ClerkProvider />` component must be added to your React entrypoint.
 
 <Tabs items={['Next.js', 'React']}>
 <Tab>
+The `<ClerkProvider />` component needs to access headers to authenticate correctly. This means anything wrapped by the provider will be opted into dynamic rendering at request time. If you have static-optimized or ISR pages that you would prefer not to be opted into dynamic rendering, make sure they are not wrapped by `<ClerkProvider />`.
+
+This is easiest to accomplish by ensuring that `<ClerkProvider />` is added further down the tree to wrap route groups that explicitly need authentication instead of having the provider wrap your application root as recommended above. For example, if your project includes a set of landing/marketing pages as well as a dashboard that requires login, you would create separate (marketing) and (dashboard) route groups. Adding `<ClerkProvider />` to the (dashboard)/layout.jsx layout file will ensure that only those routes are opted into dynamic rendering, allowing the marketing routes to be statically optimized.
+
+<Callout type="info">
+  The root layout is a server component. If you plan to use the `<ClerkProvider />` outside the root layout, it will need to be a server component as well.
+</Callout>
+
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
 ```tsx filename="app/layout.tsx"
 import React from "react";
@@ -81,80 +85,18 @@ ReactDOM.render(
 
 ## Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>publishableKey</code>,
-        <code>string</code>,
-        <>Clerk publishable key for your instance. This can be found in your Clerk Dashboard.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>frontendApi</code>,
-        <code>string</code>,
-        <>The frontend API host for your instance. This can be found in your Clerk Dashboard.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>navigate?</code>,
-        <code>{`(to: string) => Promise<unknown> | void`}</code>,
-        <>A function which takes the destination path as an argument and performs a "push" navigation.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>clerkJSVariant?</code>,
-        <code>string</code>,
-        <>If your web application uses only Control components you can set this value to headless and load a minimal ClerkJS bundle for optimal page performance.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>supportEmail?</code>,
-        <code>string</code>,
-        <>Optional support email for display in authentication screens. Will only affect Clerk Components and not Account Portal pages.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>localization?</code>,
-        <code>object</code>,
-        <>Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>appearance?</code>,
-        <code>object</code>,
-        <>Optional object to customize your Components. Will only affect Clerk Components and not Account Portal pages.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>allowedRedirectOrigins?</code>,
-        <code>{`Array<string | RegExp>`}</code>,
-        <>Optional array of domains used to validate against the query param of an auth redirect.
-        <br/>If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterSignInUrl</code>,
-        <code>string</code>,
-        <>Full URL or path to navigate after successful sign in.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterSignUpUrl</code>,
-        <code>string</code>,
-        <>Full URL or path to navigate after successful sign up.</>,
-      ],
-    }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `publishableKey` | `string \| undefined` | The publishable key from your Clerk Dashboard, used to connect to Clerk. |
+| `frontendApi` | `string` | The frontend API host for your instance. This can be found in your Clerk Dashboard. |
+| `navigate` | `(to: string) => Promise<unknown> \| void` | A function which takes the destination path as an argument and performs a "push" navigation. |
+| `clerkJSVariant` | `string` | If your web application uses only Control components, you can set this value to headless and load a minimal ClerkJS bundle for optimal page performance. |
+| `supportEmail` | `string` | Optional support email for display in authentication screens. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `localization` | <code>[Localization](/docs/components/customization/localization) \| undefined</code> | Optional object to localize your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `allowedRedirectOrigins` | `Array<string \| RegExp> \| undefined` | Optional array of domains used to validate against the query param of an auth redirect.<br />If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console. |
+| `afterSignInUrl` | `string \| undefined` | The default URL to use after the user signs in. |
+| `afterSignUpUrl` | `string \| undefined` | The default URL to use after the user signs up. |
+
+[components-ref]: /docs/components/overview
+[ap-ref]: /docs/account-portal/overview
