--- a/docs/components/control/redirect-to-signin.mdx
+++ b/docs/components/control/redirect-to-signin.mdx
@@ -92,7 +92,7 @@ export default function Index() {
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `redirectUrl` | `string` | Full URL or path to navigate after successful sign-in or sign-up. This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
-| `afterSignInUrl` | `string` | Full URL or path to navigate after successful sign-in. |
-| `afterSignUpUrl` | `string` | Full URL or path to navigate after successful sign-up. |
+| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. |
+| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
 | `initialValues` | [`SignInInitialValues`](/docs/references/javascript/types/sign-in-initial-values) | The values used to prefill the sign-in fields with. |
