--- a/docs/components/customization/layout.mdx
+++ b/docs/components/customization/layout.mdx
@@ -3,10 +3,6 @@ title: Layout
 description: Utilize Clerk's layout key in order to change the layout of the <SignIn /> and <SignUp /> components, as well as important links to your support, terms and privacy pages.
 ---
 
-import { Callout } from 'nextra-theme-docs';
-import { Tables } from '@/components/Table';
-import { CodeBlockTabs } from '@/components/CodeBlockTabs';
-
 # Layout
 
 The layout key can be used to change the layout of the [`<SignIn/>`](/docs/components/authentication/sign-in) and [`<SignUp/>`](/docs/components/authentication/sign-up) components, as well as important links to your support, terms, and privacy pages.
@@ -31,98 +27,13 @@ import { ClerkProvider } from '@clerk/nextjs';
 
 ## Properties
 
-<Tables
-  headings={['Name', 'Type', 'Description']}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>helpPageUrl</code>,
-        <code>string</code>,
-        'The URL to your help page'
-      ]
-    },
-    {
-      cells: [
-        <code>logoImageUrl</code>,
-        <code>string</code>,
-        'The URL to your logo image'
-      ]
-    },
-    {
-      cells: [
-        <code>logoPlacement</code>,
-        <code>string</code>,
-        <>
-          The placement of your logo. The options are:
-          <ul>
-            <li>
-              <code>inside</code>
-            </li>
-            <li>
-              <code>outside</code>
-            </li>
-          </ul>
-        </>
-      ]
-    },
-    {
-      cells: [
-        <code>privacyPageUrl</code>,
-        <code>string</code>,
-        'The URL to your privacy page'
-      ]
-    },
-    {
-      cells: [
-        <code>showOptionalFields</code>,
-        <code>boolean</code>,
-        'Whether to show optional fields on sign up.'
-      ]
-    },
-    {
-      cells: [
-        <code>socialButtonsPlacement</code>,
-        <code>string</code>,
-        <>
-          The placement of your social buttons. The options are:
-          <ul>
-            <li>
-              <code>bottom</code>
-            </li>
-            <li>
-              <code>top</code>
-            </li>
-          </ul>
-        </>
-      ]
-    },
-    {
-      cells: [
-        <code>socialButtonsVariant</code>,
-        <code>string</code>,
-        <>
-          The variant of your social buttons. The options are:
-          <ul>
-            <li>
-              <code>blockButton</code>
-            </li>
-            <li>
-              <code>textButton</code>
-            </li>
-            <li>
-              <code>auto</code>
-            </li>
-          </ul>
-        </>
-      ]
-    },
-    {
-      cells: [
-        <code>termsPageUrl</code>,
-        <code>string</code>,
-        'The URL to your terms page'
-      ]
-    }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `helpPageUrl` | `string` | The URL to your help page. |
+| `logoImageUrl` | `string` | The URL to your logo image. |
+| `logoPlacement` | `'inside' \| 'outside'` | The placement of your logo.  |
+| `privacyPageUrl` | `string` | The URL to your privacy page. |
+| `showOptionalFields` | `boolean` | Whether to show optional fields on sign up. |
+| `socialButtonsPlacement` | `'bottom' \| 'top'` | The placement of your social buttons. |
+| `socialButtonsVariant` | `'blockButton' \| 'textButton' \| 'auto'` | The variant of your social buttons. |
+| `termsPageUrl` | `string` | The URL to your terms page. |
