Show the component side
Might be useful for readers to see how a client components interacts with protected routes in nextjs

--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -38,6 +38,23 @@ export async function GET() {
 }
 ```
 
+When a user is authenticated, client components can fetch from protected API routes like this:
+
+```
+'use client';
+export default function ClientComponent() {
+  const [data, setData] = useState('');
+  useEffect(() => {
+    fetch("/api/example")
+    .then(response => response.json())
+          .then(d => {
+            setData(d.supabaseData)
+          })
+  }, []);
+  // Display data
+}
+```
+
 ## Check your current user's role
 
 In some cases, you need to check your user's current organization role before displaying data or allowing certain actions to be performed.
