--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -147,5 +147,5 @@ In some cases you will want to use your own button, or button text. You can do t
 | `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
 | `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. |
 | `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
-| `mode` | `'redirect' | 'modal'` | Determines what happens when a user clicks on the `<SignUpButton />`. Setting this to `'redirect'` will redirect the user to the sign-up route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to 'redirect'`
+| `mode` | `'redirect' \| 'modal'` | Determines what happens when a user clicks on the `<SignUpButton />`. Setting this to `'redirect'` will redirect the user to the sign-up route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to 'redirect'`
 
