--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -94,11 +94,12 @@ ReactDOM.render(
 | `localization?`           | `object`                                                                        | Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.                                                                                                               |
 | `appearance?`             | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages.                                                                                      |
 | `allowedRedirectOrigins?` | `Array<string \| RegExp>`                                                       | Optional array of domains used to validate against the query param of an auth redirect. If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console. |
-| `afterSignInUrl`          | `string`                                                                        | Full URL or path to navigate after successful sign in.                                                                                                                                                                     |
-| `afterSignUpUrl`          | `string`                                                                        | Full URL or path to navigate after successful sign up.                                                                                                                                                                     |
-| `isSatellite`             | `boolean \| ((url: URL) => boolean)`                                            | This option defines that the application is a satellite application.                                                                                                                                                       |
-| `domain`                  | `string \| ((url: URL) => boolean)`                                             | This option sets the domain of the satellite application. This is required since we cannot figure this out by your publishable key, since it is the same for all of your multi-domain apps.                                |
+| `afterSignInUrl?`          | `string`                                                                        | Full URL or path to navigate after successful sign in.                                                                                                                                                                     |
+| `afterSignUpUrl?`          | `string`                                                                        | Full URL or path to navigate after successful sign up.                                                                                                                                                                     |
+| `isSatellite?`             | `boolean \| ((url: URL) => boolean)`                                            | This option defines that the application is a satellite application.                                                                                                                                                       |
+| `domain?`                  | `string \| ((url: URL) => boolean)`                                             | This option sets the domain of the satellite application. If your application is a satellite application, this option is required.                                |
 | `signInUrl`               | `string`                                                                        | This url will be used for any redirects that might happen and needs to point to your primary application. This option is optional for production instances and required for development instances.                         |
+
 
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
