--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -1,6 +1,6 @@
 ---
 title: <ClerkProvider />
-description: The `<ClerkProvider />` component wraps your React application to provide active session and user context to Clerk's hooks and other components.
+description: The <ClerkProvider /> component wraps your React application to provide active session and user context to Clerk's hooks and other components.
 ---
 
 # `<ClerkProvider />`
@@ -13,6 +13,7 @@ The `<ClerkProvider />` component must be added to your React entrypoint.
 
 <Tabs items={['Next.js', 'React']}>
 <Tab>
+
 The `<ClerkProvider />` component needs to access headers to authenticate correctly. This means anything wrapped by the provider will be opted into dynamic rendering at request time. If you have static-optimized or ISR pages that you would prefer not to be opted into dynamic rendering, make sure they are not wrapped by `<ClerkProvider />`.
 
 This is easiest to accomplish by ensuring that `<ClerkProvider />` is added further down the tree to wrap route groups that explicitly need authentication instead of having the provider wrap your application root as recommended above. For example, if your project includes a set of landing/marketing pages as well as a dashboard that requires login, you would create separate (marketing) and (dashboard) route groups. Adding `<ClerkProvider />` to the (dashboard)/layout.jsx layout file will ensure that only those routes are opted into dynamic rendering, allowing the marketing routes to be statically optimized.
@@ -22,6 +23,7 @@ This is easiest to accomplish by ensuring that `<ClerkProvider />` is added furt
 </Callout>
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
+
 ```tsx filename="app/layout.tsx"
 import React from "react";
 import { ClerkProvider } from "@clerk/nextjs";
@@ -43,6 +45,7 @@ export default function RootLayout({
   );
 }
 ```
+
 ```tsx filename="_app.tsx"
 import { ClerkProvider } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
@@ -57,9 +60,11 @@ function MyApp({ Component, pageProps }: AppProps) {
 
 export default MyApp;
 ```
+
 </CodeBlockTabs>
 </Tab>
 <Tab>
+
 ```tsx filename="index.tsx"
 import React from "react";
 import ReactDOM from "react-dom";
@@ -77,6 +82,7 @@ ReactDOM.render(
   document.getElementById("root")
 );
 ```
+
 </Tab>
 </Tabs>
 
@@ -85,18 +91,24 @@ ReactDOM.render(
 
 ## Props
 
-| Name | Type | Description |
-| --- | --- | --- |
-| `publishableKey` | `string \| undefined` | The publishable key from your Clerk Dashboard, used to connect to Clerk. |
-| `frontendApi` | `string` | The frontend API host for your instance. This can be found in your Clerk Dashboard. |
-| `navigate` | `(to: string) => Promise<unknown> \| void` | A function which takes the destination path as an argument and performs a "push" navigation. |
-| `clerkJSVariant` | `string` | If your web application uses only Control components, you can set this value to headless and load a minimal ClerkJS bundle for optimal page performance. |
-| `supportEmail` | `string` | Optional support email for display in authentication screens. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-| `localization` | <code>[Localization](/docs/components/customization/localization) \| undefined</code> | Optional object to localize your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-| `allowedRedirectOrigins` | `Array<string \| RegExp> \| undefined` | Optional array of domains used to validate against the query param of an auth redirect.<br />If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console. |
-| `afterSignInUrl` | `string \| undefined` | The default URL to use after the user signs in. |
-| `afterSignUpUrl` | `string \| undefined` | The default URL to use after the user signs up. |
+| Name                      | Type                                                                                  | Description                                                                                                                                                                                                                |
+| ------------------------- | ------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `publishableKey`          | `string`                                                                              | The publishable key from your Clerk Dashboard, used to connect to Clerk.                                                                                                                                                   |
+| `frontendApi`             | `string`                                                                              | The frontend API host for your instance. This can be found in your Clerk Dashboard.                                                                                                                                        |
+| `navigate?`               | `(to: string) => Promise<unknown> \| void`                                            | A function which takes the destination path as an argument and performs a "push" navigation.                                                                                                                               |
+| `clerkJSUrl?`             | `string`                                                                              | Define the URL that `@clerk/clerk-react` should hot-load `@clerk/clerk-js` from.                                                                                                                                           |
+| `clerkJSVariant?`         | `string`                                                                              | If your web application only uses Control components, you can set this value to `headless` and load a minimal ClerkJS bundle for optimal page performance.                                                                 |
+| `clerkJSVersion?`         | `string`                                                                              | Define the npm version for `@clerk/clerk-js`.                                                                                                                                                                              |
+| `supportEmail?`           | `string`                                                                              | Optional support email for display in authentication screens. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages.                                                                  |
+| `localization?`           | `object`                                                                              | Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.                                                                                                               |
+| `appearance?`             | <code>[Appearance](/docs/components/customization/overview) \| undefined</code>       | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages.                                                                                      |
+| `localization`            | <code>[Localization](/docs/components/customization/localization) \| undefined</code> | Optional object to localize your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages.                                                                                   |
+| `allowedRedirectOrigins?` | `Array<string \| RegExp>`                                                             | Optional array of domains used to validate against the query param of an auth redirect. If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console. |
+| `afterSignInUrl?`         | `string`                                                                              | The default URL to use after the user signs in.                                                                                                                                                                            |
+| `afterSignUpUrl?`         | `string`                                                                              | The default URL to use after the user signs up.                                                                                                                                                                            |
+| `isSatellite?`            | `boolean \| ((url: URL) => boolean)`                                                  | This option defines that the application is a satellite application.                                                                                                                                                       |
+| `domain?`                 | `string \| ((url: URL) => boolean)`                                                   | This option sets the domain of the satellite application. If your application is a satellite application, this option is required.                                                                                         |
+| `signInUrl`               | `string`                                                                              | This url will be used for any redirects that might happen and needs to point to your primary application. This option is optional for production instances and required for development instances.                         |
 
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
