clean up client, external account, verification

--- a/docs/references/javascript/verification.mdx
+++ b/docs/references/javascript/verification.mdx
@@ -3,27 +3,19 @@ title: Verification
 description: The state of the verification process of a sign-in or sign-up attempt.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `Verification`
 
 The state of the verification process of a sign-in or sign-up attempt.
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [<code>attempts</code>, <code>number | null</code>, <>The number of attempts related to the verification.</>]},
-    {cells: [<code>error</code>, <code>ClerkAPIError | null</code>, <>The last error the verification attempt ran into.</>]},
-    {cells: [<code>expireAt</code>, <code>Date | null</code>, <>The time the verification will expire at.</>]},
-    {cells: [<code>externalVerificationRedirectURL</code>, <code>URL | null</code>, <>The redirect URL for an external verification.</>]},
-    {cells: [<code>nonce</code>, <code>string | null</code>, <>The <a href="https://en.wikipedia.org/wiki/Cryptographic_nonce">nonce</a> pertaining to the verification.</>]},
-    {cells: [<code>status</code>, <code>'unverified' | 'verified' | 'transferable' | 'failed' | 'expired' | null</code>, <>The state of the verification.</>]},
-    {cells: [<code>strategy</code>, <code>string | null</code>, <>The strategy pertaining to the parent Sign Up or Sign In attempt</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `attempts` | `number \| null` | The number of attempts related to the verification. |
+| `error` | `ClerkAPIError \| null` | The last error the verification attempt ran into. |
+| `expireAt` | `Date \| null` | The time the verification will expire at. |
+| `externalVerificationRedirectURL` | `URL \| null` | The redirect URL for an external verification. |
+| `nonce` | `string \| null` | The [nonce](https://en.wikipedia.org/wiki/Cryptographic_nonce) pertaining to the verification. |
+| `status` | `'unverified' \| 'verified' \| 'transferable' \| 'failed' \| 'expired' \| null` | The state of the verification. |
+| `strategy` | `string \| null` | The strategy pertaining to the parent sign-up or sign-in attempt. |
 
 ## Methods
 
