--- a/docs/references/javascript/external-account.mdx
+++ b/docs/references/javascript/external-account.mdx
@@ -9,28 +9,23 @@ The `ExternalAccount` object is a model around an identification obtained by an 
 
 External account must be verified, so that you can make sure they can be assigned to their rightful owners. The `ExternalAccount` object holds all necessary state around the verification process.
 
-## Attributes
+## Properties
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
- {cells: [<code>id</code>, <code>string</code>, <>A unique identifier for this external account.</>]},
-{cells: [<code>identificationId</code>, <code>string</code>, <>The identification with which this external account is associated.</>]},
-{cells: [<code>provider</code>, <code>string</code>, <>The provider name e.g. <code>google</code></>]},
-{cells: [<code>publicMetadata</code>, <code>object</code>, <>Metadata provided about the user from the provider</>]},
-{cells: [<code>providerUserId</code>, <code>string</code>, <>The unique ID of the user in the provider.</>]},
-{cells: [<code>emailAddress</code>, <code>string</code>, <>The provided email address of the user.</>]},
-{cells: [<code>approvedScopes</code>, <code>string[]</code>, <>The scopes that the user has granted access to.</>]},
-{cells: [<code>firstName</code>, <code>string</code>, <>The provided first name of the user.</>]},
-{cells: [<code>lastName</code>, <code>string</code>, <>The provided last name of the user.</>]},
-{cells: [<code>avatarUrl</code>, <code>string</code>, <>The provided avatar URL of the user.</>]},
-{cells: [<code>username</code>, <code>string | null</code>, <>The provided username of the user.</>]},
-{cells: [<code>label</code>, <code>string | null</code>, <>A descriptive label to differentiate multiple external accounts of the same user for the same provider.</>]},
-{cells: [<code>verification</code>, <a href="/docs/references/javascript/verification"><code>Verification</code></a>, <>An object holding information on the verification of this external account.</>]}
-   ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | A unique identifier for this external account. |
+| `identificationId` | `string` | The identification with which this external account is associated. |
+| `provider` | `string` | The provider name e.g. `google` |
+| `publicMetadata` | `object` | Metadata provided about the user from the provider. |
+| `providerUserId` | `string` | The unique ID of the user in the provider. |
+| `emailAddress` | `string` | The provided email address of the user. |
+| `approvedScopes` | `string[]` | The scopes that the user has granted access to. |
+| `firstName` | `string` | The provided first name of the user. |
+| `lastName` | `string` | The provided last name of the user. |
+| `avatarUrl` | `string` | The provided avatar URL of the user. |
+| `username` | `string \| null` | The provided username of the user. |
+| `label` | `string \| null` | A descriptive label to differentiate multiple external accounts of the same user for the same provider. |
+| `verification` | [`Verification`](/docs/references/javascript/verification) | An object holding information on the verification of this external account. |
 
 ## Methods
 
@@ -39,25 +34,21 @@ External account must be verified, so that you can make sure they can be assigne
 function reauthorize(params: ReauthorizeExternalAccountParams): Promise<ExternalAccount>;
 ```
 
-Invoke a re-authorization flow for an existing external account.
+Invokes a re-authorization flow for an existing external account.
 
 #### `ReauthorizeExternalAccountParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>additionalScopes</code>, <code>string[] | undefined</code>, <>Any additional scopes you would like your user to be prompted to approve.</>]},
-{cells: [<code>redirectUrl</code>, <code>string | undefined</code>, <>The URL to redirect back to one the OAuth flow has completed successfully or unsuccessfully.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `additionalScopes` | `string[]` | Any additional scopes you would like your user to be prompted to approve. |
+| `redirectUrl` | `string` | The URL to redirect back to one the OAuth flow has completed successfully or unsuccessfully. |
 
 ### `destroy()`
 ```typescript
 function destroy(): Promise<void>;
 ```
 
-Delete this external account.
+Deletes this external account.
 
 
 ### `providerSlug()`
@@ -66,7 +57,7 @@ Delete this external account.
 function providerSlug(): string;
 ```
 
-A getter method for the `provider` attribute
+A getter method for the `provider` attribute.
 
 ### `providerTitle()`
 
@@ -74,9 +65,9 @@ A getter method for the `provider` attribute
 function providerTitle(): string;
 ```
 
-The title of the provider with the word "Account" appended.
+Returns the title of the provider with the word "Account" appended.
 
-EG: `google` becomes `Google Account`
+EG: if `google` is passed as the parameter, `Google Account` will be returned.
 
 ### `accountIdentifier()`
 
@@ -84,7 +75,7 @@ EG: `google` becomes `Google Account`
 function accountIdentifier(): string;
 ```
 
-The identifier of the account, either the:
+Returns the identifier of the account, which can be one of the following:
 
 - `username` if present
 - `emailAddress` if present
