clean up /signin pages for javascript reference docs

--- a/docs/references/javascript/sign-in/authenticate-with.mdx
+++ b/docs/references/javascript/sign-in/authenticate-with.mdx
@@ -1,11 +1,11 @@
 ---
-title: Authenticate With
+title: AuthenticateWith
 description: These are all methods on the SignIn class that allow you to authenticate with different methods.
 ---
 
-# Authenticate with
+# AuthenticateWith
 
-These are all methods on [the `SignIn` class](/docs/references/javascript/sign-in/sign-in) that allow you to authenticate with different methods.
+These are all methods on the [`SignIn`][signin-ref] class that allow you to authenticate with different methods.
 
 ## Methods
 
@@ -19,34 +19,17 @@ Signs in users via OAuth. This is commonly known as Single Sign On (SSO), where 
 
 #### `AuthenticateWithRedirectParams`
 
-<Tables
-  headings={['Name', 'Type', 'Description']}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[{cells: [
-        <code>strategy</code>,
-        <code>string</code>,
-        <>The OAuth provider that will be used for signing in. Must be one of the supported <a href="/docs/references/javascript/types/oauth-strategy"><code>OAuthStrategy</code></a>.</>
-    ]}, {cells: [
-        <code>redirectUrl</code>,
-        <code>string</code>,
-        <>The URL that the OAuth provider should redirect to, on successful authorization on their part.</>
-    ]}, {cells: [
-        <code>redirectUrlComplete</code>,
-        <code>string</code>,
-        <>The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in</>
-    ]}]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `strategy` | `string` | The OAuth provider that will be used for signing in. Must be one of the supported [`OAuthStrategy`](/docs/references/javascript/types/oauth-strategy). |
+| `redirectUrl` | `string` | The URL that the OAuth provider should redirect to, on successful authorization on their part. |
+| `redirectUrlComplete` | `string` | The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. |
 
 #### Returns
 
-<Tables
-  headings={['Type', 'Description']}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[{cells: [
-        <code>{"Promise<void>"}</code>,
-        <>This method returns a <code>Promise</code> which doesn't resolve to any value.</>
-    ]}]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<void>` | This method returns a `Promise` which doesn't resolve to any value. |
 
 ### `authenticateWithMetamask()`
 
@@ -58,14 +41,9 @@ Starts a sign in flow that uses the Metamask browser extension to authenticate t
 
 #### Returns
 
-<Tables
-  headings={['Type', 'Description']}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[{cells: [
-        <code>{"Promise<SignInResource>"}</code>,
-        <>This method returns a <code>Promise</code> which resolves to the current <a href="/docs/references/javascript/sign-in/sign-in"><code>SignIn</code></a>.</>
-    ]}]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<SignInResource>` | This method returns a `Promise` which resolves to the current [`SignIn`][signin-ref]. |
 
 ### `authenticateWithWeb3()`
 
@@ -77,38 +55,16 @@ Starts a sign in flow that authenticates the user against their public wallet ad
 
 #### `AuthenticateWithWeb3Params`
 
-<Tables
-  headings={['Name', 'Type', 'Description']}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={
-        [{cells: [
-            <code>identifier</code>,
-            <code>{"string"}</code>,
-            <>The user's Web3 ID</>
-        ]},
-        {cells: [
-        <code>generateSignature</code>,
-        <code>{"(opts: GenerateSignatureParams) => Promise<string>"}</code>,
-        <>The method of how to generate the signature for the Web3 sign-in. See <a href="#generate-signature-params"><code>GenerateSignatureParams</code></a> for more details.</>
-        ]}
-    ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `identifier` | `string` | The user's Web3 ID. |
+| `generateSignature` | `(opts: GenerateSignatureParams) => Promise<string>` | The method of how to generate the signature for the Web3 sign-in. See [`GenerateSignatureParams`](#generate-signature-params) for more details. |
 
 ##### `GenerateSignatureParams`
 
-<Tables
-  headings={['Name', 'Type', 'Description']}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={
-        [{cells: [
-            <code>identifier</code>,
-            <code>{"string"}</code>,
-            <>The user's Web3 ID</>
-        ]},
-        {cells: [
-        <code>nonce</code>,
-        <code>{"string"}</code>,
-        <>The <a href="https://en.wikipedia.org/wiki/Cryptographic_nonce">crypographic nonce</a> used in the sign-in.</>
-        ]}
-    ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `identifier` | `string` | The user's Web3 ID. |
+| `nonce` | `string` | The [cryptographic nonce](https://en.wikipedia.org/wiki/Cryptographic_nonce) used in the sign-in. |
+
+[signin-ref]: /docs/references/javascript/sign-in/sign-in
