--- a/docs/references/javascript/sign-in/first-factor.mdx
+++ b/docs/references/javascript/sign-in/first-factor.mdx
@@ -5,7 +5,7 @@ description: These are all methods on the SignIn class that allow you to handle 
 
 # First Factor
 
-These are all methods on [the `SignIn` class](/docs/references/javascript/sign-in/sign-in) that allow you to handle the first factor of a multi-factor authentication flow.
+These are all methods on the [`SignIn`](/docs/references/javascript/sign-in/sign-in) class that allow you to handle the first factor of a multi-factor authentication flow.
 
 ## `prepareFirstFactor()`
 
@@ -19,37 +19,20 @@ Common scenarios are one-time code (OTP) or social account (SSO) verification. T
 
 ### `PrepareFirstFactorParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
- {cells: [<code>strategy </code>, <code>string</code>, <>
- The <code>strategy</code> value depends on the object's <code>identifier</code> value. Each authentication identifier supports different verification strategies. Possible strategy values are:
- <ul> 
-<li><code>email_link</code>: User will receive an email magic link via email. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
-<li><code>email_code</code>: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
-<li><code>phone_code</code>: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The <code>phone_number_id</code> parameter can also be specified to select which of the user's known phone numbers the SMS will go to.</li>
-<li><code>web3_metamask_signature</code>: The verification will attempt to be completed using the user's web3 wallet public address. The <code>web3_wallet_id</code> parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports <a href="https://metamask.io/">Metamask</a >.</li>
-<li><code>{"oauth_<provider>"}</code>: The user will be authenticated with their Social login account. See available <a href="/docs/references/javascript/sign-in/authenticate-with#o-auth-strategy">OAuth Strategies</a>.</li>
- </ul>
- </>]},
-{cells: [<code>emailAddressId?</code>, <code>string</code>, <>Unique identifier for the user's email address that will receive an email message with the one-time authentication code. This parameter will work only when the <code>email_code</code> strategy is specified.</>]},
-{cells: [<code>phoneNumberId?</code>, <code>string</code>, <>Unique identifier for the user's phone number that will receive an SMS message with the one-time authentication code. This parameter will work only when the <code>phone_code</code> strategy is specified.</>]},
-{cells: [<code>web3WalletId?</code>, <code>string</code>, <>Unique identifier for the user's web3 wallet public address. This parameter will work only when the <code>web3_metamask_signature</code> strategy is specified.</>]},
-{cells: [<code>redirectUrl?</code>, <code>string</code>, <>The URL that the OAuth provider should redirect to, on successful authorization on their part. This parameter is required only for OAuth strategies <code>(oauth_*)</code>. </>]},
-{cells: [<code>actionCompleteRedirectUrl?</code>, <code>string</code>, <>The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only for OAuth strategies <code>(oauth_*)</code>. </>]},
- ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `strategy` | `string` | The `strategy` value depends on the object's `identifier` value. Each authentication identifier supports different verification strategies. Possible `strategy` values are: <ul><li>`email_link`: User will receive an email magic link via email. The `email_address_id` parameter can also be specified to select one of the user's known email addresses.</li><li>`email_code`: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The `email_address_id` parameter can also be specified to select one of the user's known email addresses.</li><li>`phone_code`: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The `phone_number_id` parameter can also be specified to select which of the user's known phone numbers the SMS will go to.</li><li>`web3_metamask_signature`: The verification will attempt to be completed using the user's web3 wallet public address. The `web3_wallet_id` parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports [Metamask](https://metamask.io/).</li><li>`oauth_<provider>`: The user will be authenticated with their Social login account. See available [OAuth Strategies](/docs/references/javascript/types/oauth-strategy).</li></ul> |
+| `emailAddressId?` | `string` | Unique identifier for the user's email address that will receive an email message with the one-time authentication code. This parameter will work only when the `email_code` strategy is specified. |
+| `phoneNumberId?` | `string` | Unique identifier for the user's phone number that will receive an SMS message with the one-time authentication code. This parameter will work only when the `phone_code` strategy is specified. |
+| `web3WalletId?` | `string` | Unique identifier for the user's web3 wallet public address. This parameter will work only when the `web3_metamask_signature` strategy is specified. |
+| `redirectUrl?` | `string` | The URL that the OAuth provider should redirect to, on successful authorization on their part. This parameter is required only if you set the `strategy` param to an OAuth strategy like `oauth_<provider>`. |
+| `actionCompleteRedirectUrl?` | `string` | The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only if you set the `strategy` param to an OAuth strategy like `oauth_<provider>`. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
- {cells: [<code>Promise{"<"}<a href="/docs/references/javascript/sign-in/sign-in">SignIn</a>{">"}</code>, <>This method returns a <code>Promise</code> which resolves with a <code><a href="/docs/references/javascript/sign-in/sign-in">SignIn</a></code> object. Check the <code>firstFactorVerification</code> attribute for the status of the first factor verification process.</>]}
-    ]}
-/>
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[SignIn][signin-ref]\></code> | This method returns a `Promise` which resolves with a [`SignIn`][signin-ref] object. Check the `firstFactorVerification` attribute for the status of the first factor verification process. |
 
 ## `attemptFirstFactor()`
 
@@ -59,38 +42,23 @@ function attemptFirstFactor(params: AttemptFirstFactorParams): Promise<SignIn>;
 
 Attempts to complete the first factor verification process. This is a required step in order to complete a sign in, as users should be verified at least by one factor of authentication.
 
-Make sure that a `SignIn` object already exists before you call this method, either by first calling `SignIn.create` or `SignIn.prepareFirstFactor`. The only strategy that does not require a verification to have already been prepared before attempting to complete it, is the **password** strategy.
+Make sure that a [`SignIn`][signin-ref] object already exists before you call this method, either by first calling `SignIn.create` or `SignIn.prepareFirstFactor`. The only strategy that does not require a verification to have already been prepared before attempting to complete it, is the `password` strategy.
 
 Depending on the strategy that was selected when the verification was prepared, the method parameters should be different.
 
 ### `AttemptFirstFactorParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [<code>strategy </code>, <code>string</code>, <>
-    The <code>strategy</code> value depends on the object's <code>identifier</code> value. Each authentication identifier supports different verification strategies. Possible <code>strategy</code> values are:
-    <ul>
-    <li><code>email_link</code>: User will receive an email magic link via email. The email_address_id parameter can also be specified to select one of the user's known email addresses.</li>
-    <li><code>email_code</code>: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The email_address_id parameter can also be specified to select one of the user's known email addresses.</li>
-    <li><code>phone_code</code>: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The phone_number_id parameter can also be specified to select which of the user's known phone numbers the SMS will go to.</li>
-    <li><code>password</code>: The verification will attempt to be completed with the user's password.</li>
-    <li><code>web3_metamask_signature</code>: The verification will attempt to be completed using the user's web3 wallet public address.</li>
-    </ul>
-    </>]},
-    {cells: [<code>code?</code>, <code>string</code>, <>The one-time code that was sent to the user as part of this verification step. Required when <code>strategy</code> is <code>email_code</code> or <code>phone_code</code>.</>]},
-    {cells: [<code>password?</code>, <code>string</code>, <>The user's password string. Required when <code>strategy</code> is <code>password</code>.</>]},
-    {cells: [<code>signature?</code>, <code>string</code>, <>Web3 wallet generated signature to be verified. This parameter is required only for web3 verification strategies.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `strategy` | `string` | The `strategy` value depends on the object's `identifier` value. Each authentication identifier supports different verification strategies. Possible `strategy` values are: <ul><li>`email_code`: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The `email_address_id` parameter can also be specified to select one of the user's known email addresses.</li><li>`phone_code`: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The `phone_number_id` parameter can also be specified to select which of the user's known phone numbers the SMS will go to.</li><li>`password`: The verification will attempt to be completed with the user's password.</li><li>`web3_metamask_signature`: The verification will attempt to be completed using the user's web3 wallet public address. The `web3_wallet_id` parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports [Metamask](https://metamask.io/).</li></ul> |
+| `code?` | `string` | The one-time code that was sent to the user as part of this verification step. This parameter is required only when `strategy` is set to `email_code` or `phone_code`. |
+| `password?` | `string` | The user's password string. This parameter is required only when `strategy` is set to `password`. |
+| `signature?` | `string` | Web3 wallet generated signature to be verified. This parameter is required only for web3 verification strategies. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-     {cells: [<code>Promise{"<"}<a href="/docs/references/javascript/sign-in/sign-in">SignIn</a>{">"}</code>, <>This method returns a <code>Promise</code> which resolves with a <code><a href="/docs/references/javascript/sign-in/sign-in">SignIn</a></code> object. Check the <code>firstFactorVerification</code> attribute for the status of the first factor verification process.</>]}
-        ]}
-/>
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[SignIn][signin-ref]\></code> | This method returns a `Promise` which resolves with a [`SignIn`][signin-ref] object. Check the `firstFactorVerification` attribute for the status of the first factor verification process. |
+
+[signin-ref]: /docs/references/javascript/sign-in/sign-in
