--- a/docs/references/javascript/sign-in/sign-in.mdx
+++ b/docs/references/javascript/sign-in/sign-in.mdx
@@ -19,48 +19,18 @@ The `SignIn` object's properties can be split into logical groups, with each gro
 
 ## Attributes
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [<code>status</code>, <code>string</code>, <>
-    The current status of the sign-in. It can take the following values:
-    <ul>
-     <li><code>needs_identifier</code>: The authentication identifier hasn't been provided.</li>
-     <li><code>needs_first_factor</code>: First factor verification for the provided identifier needs to be prepared and verified.</li>
-     <li><code>needs_second_factor</code>: Second factor verification (2FA) for the provided identifier needs to be prepared and verified.</li>
-     <li><code>complete</code>: The sign-in is complete and the user is authenticated.</li>
-     <li><code>abandoned</code>: The sign-in has been inactive for a long period of time, thus it's considered as abandoned and need to start over.</li>
-     </ul>
-    </>]},
-    {cells: [<code>supportedIdentifiers</code>, <code>string[]</code>, <>Array of all the authentication identifiers that are supported for this sign in. Examples of this could be:
-    <ul>
-    <li><code>email_address</code></li>
-    <li><code>phone_number</code></li>
-    <li><code>web3_wallet</code></li>
-    <li><code>username</code></li>
-    </ul>
-    </>]},
-    {cells: [<code>identifier</code>, <code>string | null</code>, <>The authentication identifier value for the current sign-in.</>]},
-    {cells: [<code>supportedExternalAccounts</code>, <code>string[]</code>, <>Array of all the external accounts that can be used in this sign in. For example:<br/><code>["oauth_google", "oauth_facebook"]</code></>]},
-    {cells: [<code>supportedFirstFactors</code>, <code>SignInFactor[]</code>, <>Array of the first factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used. For example:
-    <ul>
-    <li><code>email_code</code> for email addresses</li>
-    <li><code>phone_code</code> for phone numbers</li>
-    </ul>
-    As well as the identifier that the factor refers to.</>]},
-    {cells: [<code>supportedSecondFactors</code>, <code>SignInFactor[]</code>, <>Array of the second factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used, for example:
-    <ul>
-    <li><code>email_code</code> for email addresses</li>
-    <li><code>totp</code> for TOTPs</li>
-    </ul>
-    As well as the identifier that the factor refers to. Please note that this property is populated only when the first factor is verified.</>]},
-    {cells: [<code>firstFactorVerification</code>, <code>Verification</code>, <>The state of the verification process for the selected first factor. Please note that this property contains an empty verification object initially, since there is no first factor selected. You need to call the <a href="/docs/references/javascript/sign-in/first-factor#prepare-first-factor"><code>prepareFirstFactor</code></a> method in order to start the verification process.</>]},
-    {cells: [<code>secondFactorVerification</code>, <code>Verification</code>, <>The state of the verification process for the selected second factor. Similar to <code>firstFactorVerification</code>, this property contains an empty verification object initially, since there is no second factor selected. For the <code>phone_code</code> strategy, you need to call the <a href="/docs/references/javascript/sign-in/second-factor#prepare-second-factor"><code>prepareSecondFactor</code></a> method in order to start the verification process. For the <code>totp</code> strategy you can directly attempt.</>]},
-    {cells: [<code>userData</code>, <code>UserDate</code>, <>An object containing information about the user of the current sign in. This property is populated only once an identifier is given to the <code>SignIn</code> object.</>]},
-    {cells: [<code>createdSessionId</code>, <code>string | null</code>, <>The identifier of the session that was created upon completion of the current sign-in. The value of this property is <code>null</code> if the sign-in status is not <code>complete</code>.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `status` | `string` | The current status of the sign-in.<br/>The following values are supported:<br/><ul><li>`needs_identifier`: The authentication identifier hasn't been provided.</li><li>`needs_first_factor`: First factor verification for the provided identifier needs to be prepared and verified.</li><li>`needs_second_factor`: Second factor verification (2FA) for the provided identifier needs to be prepared and verified.</li><li>`complete`: The sign-in is complete and the user is authenticated.</li><li>`abandoned`: The sign-in has been inactive for a long period of time, thus it's considered as abandoned and need to start over.</li></ul> |
+| `supportedIdentifiers` | `string[]` | Array of all the authentication identifiers that are supported for this sign in.<br/>Examples of this could be: <ul><li>`email_address`</li><li>`phone_number`</li><li>`web3_wallet`</li><li>`username`</li></ul> |
+| `identifier` | `string \| null` | The authentication identifier value for the current sign-in. |
+| `supportedExternalAccounts` | `string[]` | Array of all the external accounts that can be used in this sign in.<br />For example:<br /><code>["oauth_google", "oauth_facebook"]</code> |
+| `supportedFirstFactors` | `SignInFactor[]` | Array of the first factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used.<br/>For example: <ul><li>`email_code` for email addresses</li><li>`phone_code` for phone numbers</li></ul> As well as the identifier that the factor refers to. |
+| `supportedSecondFactors` | `SignInFactor[]` | Array of the second factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used.<br/>For example: <ul><li>`email_code` for email addresses</li><li>`phone_code` for phone numbers</li></ul> As well as the identifier that the factor refers to. Please note that this property is populated only when the first factor is verified. |
+| `firstFactorVerification` | `Verification` | The state of the verification process for the selected first factor. Please note that this property contains an empty verification object initially, since there is no first factor selected. You need to call the [`prepareFirstFactor`](/docs/references/javascript/sign-in/first-factor#prepare-first-factor) method in order to start the verification process. |
+| `secondFactorVerification` | `Verification` | The state of the verification process for the selected second factor. Similar to `firstFactorVerification`, this property contains an empty verification object initially, since there is no second factor selected. For the `phone_code` strategy, you need to call the [`prepareSecondFactor`](/docs/references/javascript/sign-in/second-factor#prepare-second-factor) method in order to start the verification process. For the `totp` strategy, you can directly attempt. |
+| `userData` | `UserData` | An object containing information about the user of the current sign-in. This property is populated only once an identifier is given to the [`SignIn`][signin-ref] object. |
+| `createdSessionId` | `string \| null` | The identifier of the session that was created upon completion of the current sign-in. The value of this property is `null` if the sign-in status is not `complete`. |
 
 ## Methods
 
@@ -70,45 +40,27 @@ The `SignIn` object's properties can be split into logical groups, with each gro
 function create(params: SignInCreateParams): Promise<SignIn>;
 ```
 
-Use this method to kick-off the sign in flow. It creates a **SignIn** object and stores the sign in lifecycle state.
+Use this method to kick-off the sign in flow. It creates a [`SignIn`][signin-ref] object and stores the sign-in lifecycle state.
 
-Depending on the use-case and the `params` you pass to the `create` method, it can either complete the sign in process in one go, or simply collect part of the necessary data for completing authentication at a later stage.
+Depending on the use-case and the `params` you pass to the `create` method, it can either complete the sign-in process in one go, or simply collect part of the necessary data for completing authentication at a later stage.
 
 #### `SignInCreateParams`
 
-
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [<code>identifier</code>, <code>string</code>, <>The authentication identifier for the sign in. This can be the value of the user's email address, phone number or username.</>]},
-{cells: [<code>strategy</code>, <code>string</code>,<>Optional. Select the first factor verification strategy. The <code>strategy</code> value depends on the object's <code>identifier</code> value. Each authentication identifier supports different verification strategies. Possible <code>strategy</code> values are:
-<ul>
-<li><code>email_link</code>: User will receive an email magic link via email. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
-<li><code>email_code</code>: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
-<li><code>phone_code</code>: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The <code>phone_number_id</code> parameter can also be specified to select which of the user's known phone numbers the SMS will go to.</li>
-<li><code>web3_metamask_signature</code>: The verification will attempt to be completed using the user's web3 wallet public address. The <code>web3_wallet_id</code> parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports [Metamask](https://metamask.io/).</li>
-<li><code>{"oauth_<provider>"}</code>: The user will be authenticated with their Social login account. See available OAuth Strategies.</li>
-<li><code>ticket</code>: The user will be authenticated via a "ticket" or "token" generated from the Backend API.</li>
-</ul></>]},
-{cells: [<code>password</code>, <code>string</code>, <>Optional. Supply the user's password, if <code>password</code> strategy has been specified.</>]},
-{cells: [<code>ticket</code>, <code>string</code>, <>Optional. If the strategy is <code>ticket</code> you need to provide the ticket <em>or token</em> generated from the Backend API.</>]},
-{cells: [<code>redirectUrl</code>, <code>string</code>, <>The URL that the OAuth provider should redirect to, on successful authorization on their part. This parameter is required only for OAuth strategies <code>(oauth_*)</code>.</>]},
-{cells: [<code>actionCompleteRedirectUrl</code>, <code>string</code>, <>The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only for OAuth strategies <code>(oauth_*)</code>.</>]},
-{cells: [<code>transfer</code>, <code>boolean</code>, <>Transfer the user to a dedicated sign in for an oauth flow.</>]},
-  ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `identifier` | `string` | The authentication identifier for the sign-in. This can be the value of the user's email address, phone number or username. |
+| `strategy?` | `string` | Select the first factor verification strategy. The `strategy` value depends on the object's `identifier` value. Each authentication identifier supports different verification strategies.<br/>Possible `strategy` values are: <ul><li>`email_link`: User will receive an email magic link via email. The `email_address_id` parameter can also be specified to select one of the user's known email addresses.</li><li>`email_code`: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The `email_address_id` parameter can also be specified to select one of the user's known email addresses.</li><li>`phone_code`: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The `phone_number_id` parameter can also be specified to select which of the user's known phone numbers the SMS will go to.</li><li>`web3_metamask_signature`: The verification will attempt to be completed using the user's web3 wallet public address. The `web3_wallet_id` parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports [Metamask](https://metamask.io/).</li><li>`oauth_<provider>`: The user will be authenticated with their Social login account. See available [OAuth Strategies](/docs/references/javascript/types/oauth-strategy).</li><li>`ticket`: The user will be authenticated via a "ticket" or "token" generated from the Backend API.</li></ul> |
+| `password?` | `string` | Supply the user's password. This parameter is required only if `strategy` is set to  `password`. |
+| `ticket?` | `string` | Provide the ticket *or token* generated from the Backend API. This parameter is required only if `strategy` is set to `ticket`. |
+| `redirectUrl?` | `string` | The URL that the OAuth provider should redirect to, on successful authorization on their part. This parameter is required only if `strategy` is set to an OAuth strategy like `oauth_<provider>`. If you set the `strategy` param to `email_link`, this parameter is optional. |
+| `actionCompleteRedirectUrl?` | `string` | The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only if `strategy` is set to an OAuth strategy like `oauth_<provider>`. |
+| `transfer?` | `boolean` | Transfer the user to a dedicated sign-in for an OAuth flow. |
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-    {cells: [<code>{"Promise<SignIn>"}</code>, <>This method returns a <code>Promise</code> which resolves with a <code>SignIn</code> object. Check the <code>status</code> attribute to see if the <code>SignIn</code> has been completed or a hint on what needs to happen next.</>]},
-  ]}
-  />
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[SignIn][signin-ref]\></code> | This method returns a `Promise` which resolves with a [`SignIn`][signin-ref] object. Check the `status` attribute to see if the sign-in has been completed or a hint on what needs to happen next. |
 
 ### `resetPassword()`
 
@@ -116,18 +68,14 @@ Depending on the use-case and the `params` you pass to the `create` method, it c
 function resetPassword(params: ResetPasswordParams): Promise<SignIn>;
 ```
 
+Resets a user's password.
+
 #### `ResetPasswordParams`
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [<code>password</code>, <code>string</code>, <>The user's current password.</>]},
-    {cells: [<code>signOutOfOtherSessions</code>, <code>boolean | undefined</code>, <>If <code>true</code>, log the user out of all other authenticated sessions.</>]},
-  ]}
-/>
-
+| Name | Type | Description |
+| --- | --- | --- |
+| `password` | `string` | The user's current password. |
+| `signOutOfOtherSessions?` | `boolean \| undefined` | If `true`, log the user out of all other authenticated sessions. |
 
 ### `createMagicLinkFlow()`
 
@@ -146,26 +94,17 @@ The second function can be used to stop polling at any time, allowing for full c
 
 `createMagicLinkFlow` returns an object with two functions:
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [<code>startMagicLinkFlow</code>, <code>(params: <a href="#signinstartmagiclinkflowparams">SignInStartMagicLinkFlowParams</a>) {"=>"} Promise{"<"}<a href="/docs/references/javascript/sign-in/sign-in">SignIn</a>{">"}</code>, <>Function to start the magic link flow. It prepares a magic link verification and polls for the verification result.</>]},
-    {cells: [<code>cancelMagicLinkFlow</code>, <code>{"() => void"}</code>, <>Function to cleanup the magic link flow. Stops waiting for verification results.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `startMagicLinkFlow` | <code>(params: [SignInStartMagicLinkFlowParams](#sign-in-start-magic-link-flow-params)) => Promise\<[SignIn][signin-ref]\></code> | Function to start the magic link flow. It prepares a magic link verification and polls for the verification result. |
+| `cancelMagicLinkFlow` | `() => void` | Function to cleanup the magic link flow. Stops waiting for verification results. |
 
-#### `SignInStartMagicFlowParams`
+#### `SignInStartMagicLinkFlowParams`
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [<code>redirectUrl</code>, <code>string</code>, <>The magic link target URL. Users will be redirected here once they click the magic link from their email.</>]},
-    {cells: [<code>emailAddressId</code>, <code>string</code>, <>The ID of the user's email address that's going to be used as the first factor identification for verification.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `emailAddressId` | `string` | The ID of the user's email address that's going to be used as the first factor identification for verification. |
+| `redirectUrl` | `string` | The magic link target URL. Users will be redirected here once they click the magic link from their email. |
 
 ## Additional methods
 
@@ -186,3 +125,5 @@ In addition to the methods listed above, the `SignIn` class also has the followi
 *   [`authenticateWithRedirect()`](/docs/references/javascript/sign-in/authenticate-with#authenticate-with-redirect)
 *   [`authenticateWithMetamask()`](/docs/references/javascript/sign-in/authenticate-with#authenticate-with-metamask)
 *   [`authenticateWithWeb3()`](/docs/references/javascript/sign-in/authenticate-with#authenticate-with-web3)
+
+[signin-ref]: /docs/references/javascript/sign-in/sign-in
